Login, SignUp, SignInRegister layout done

--- a/app/src/main/res/drawable/edit_text_outline.xml
+++ b/app/src/main/res/drawable/edit_text_outline.xml
@@ -3,6 +3,6 @@
     <solid android:color="#fff"/>
     <stroke
         android:width="2dp"
-        android:color="@color/colorRegContButton"/>
+        android:color="@color/colorPrimary"/>
     <size android:height="52dp"/>
 </shape>
