--- a/app/src/main/res/drawable/btn_red_tint.xml
+++ b/app/src/main/res/drawable/btn_red_tint.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <stroke android:color="@color/colorPrimary"
+        android:width="1dp"/>
     <solid android:color="@color/white"/>
-    <corners android:radius="12dp"/>
-    <size android:height="52dp"/>
+    <corners android:radius="2dp"/>
+
 </shape>
