--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
-    <corners android:radius="12dp"/>
-    <size android:height="52dp"/>
+
+    <corners android:radius="8dp" />
+    <stroke android:color="@color/colorAccent"
+        android:width="2dp"/>
+
 </shape>
