--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#D54946</color>
+    <color name="colorPrimaryDark">#B14947</color>
+    <color name="colorAccent">#D54946</color>
+    <color name="black">#000000</color>
+    <color name="primary_red">#832727</color>
+    <color name="white">#fff</color>
 </resources>
