--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Login">
+    tools:context=".Activity.login_Activity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,98 +15,147 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <pl.droidsonroids.gif.GifImageView
+            <!--<pl.droidsonroids.gif.GifImageView
                 android:layout_width="match_parent"
                 android:layout_height="256dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/car_animation"
-                />
+                />-->
 
-            <!--<ImageView
+            <ImageView
                 android:id="@+id/login_image"
                 android:layout_width="match_parent"
-                android:layout_height="256dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/car_animation"/>-->
+                android:layout_height="220dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/hurry_logo_back"/>
 
             <LinearLayout
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp">
+                android:layout_height="match_parent"
+                android:layout_marginTop="25dp"
+                android:orientation="vertical">
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="16dp"
-                    android:background="@drawable/edit_text_background"
-                    android:drawablePadding="20dp"
-                    android:drawableTint="@color/colorAccent"
-                    android:drawableLeft="@drawable/draweble_user"
-                    android:hint="User Name or Email"
-                    android:inputType="textEmailAddress"
-                    android:padding="12dp" />
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="16dp"
-                    android:background="@drawable/edit_text_background"
-                    android:drawablePadding="20dp"
-                    android:drawableTint="@color/colorAccent"
-                    android:drawableLeft="@drawable/password_draweble"
-                    android:drawableRight="@drawable/password_visibility_drawable"
-                    android:hint="Password"
-                    android:inputType="textEmailAddress"
-                    android:padding="12dp" />
-
-                <CheckBox
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="16dp"
-                    android:textColor="@color/colorAccent"
-                    android:text="@string/remember_me"/>
-
-
-                <Button
-                    android:layout_width="match_parent"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorPrimary"
+                    android:fontFamily="@font/jose_san_bold"
+                    android:text="Mobile Verification"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/jose_san"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/login_btn_background"
-                    android:textColor="#fff"
-                    android:text="Login"/>
-
+                    android:text="Please enter your mobile number"
+                    android:layout_gravity="center"/>
+                <androidx.legacy.widget.Space
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_gravity="center"
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="8dp"
-                        android:text="@string/having_trouble_login"/>
+                    android:layout_height="wrap_content">
 
-                    <TextView
+                    <androidx.cardview.widget.CardView
+                        android:layout_marginStart="40dp"
                         android:layout_width="wrap_content"
+                        android:elevation="12dp"
+                        android:layout_height="40dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:orientation="horizontal"
+                            android:layout_height="match_parent">
+
+                            <ImageView
+                                android:layout_width="25dp"
+                                android:background="@drawable/bangladesh"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="5dp"
+                                android:layout_height="25dp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="+88"
+                                android:layout_marginStart="5dp"
+                                android:layout_marginEnd="5dp"
+                                android:textSize="16sp"
+                                android:textColor="@color/black"
+                                android:layout_gravity="center"
+                                />
+
+
+                        </LinearLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="150dp"
+                        android:elevation="12dp"
+                        android:layout_marginStart="20dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginTop="8dp"
-                        android:textColor="#0D47A1"
-                        android:text="Reset password"/>
+                        >
+
+                        <EditText
+                            android:id="@+id/phonenumEditText"
+                            android:layout_width="match_parent"
+                            android:inputType="phone"
+                            android:textSize="16sp"
+                            android:layout_marginStart="8dp"
+                            android:textColor="@color/black"
+                            android:hint="0177334566"
+                            android:background="#00000000"
+                            android:layout_height="40dp" />
+
+                    </androidx.cardview.widget.CardView>
+
+
+
                 </LinearLayout>
+
+                <androidx.legacy.widget.Space
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp" />
+
+
+                <ImageButton
+                    android:id="@+id/nextBtnmobileverification"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="50dp"
+                    android:background="@drawable/circle_button"
+                    android:src="@drawable/ar"
+                    android:layout_gravity="center"
+                    android:padding="8dp"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:scaleType="fitXY"/>
+                <androidx.legacy.widget.Space
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp" />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/jose_san"
+                    android:text="Terms And Condition"
+                    android:layout_marginTop="35dp"
+                    android:layout_gravity="center"/>
 
 
 
