--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="black">#000000</color>
     <color name="primary_red">#832727</color>
     <color name="white">#fff</color>
+    <color name="image_red">#FC5F61</color>
 </resources>
