--- a/app/src/main/res/layout/activity_choose_your_vehicle.xml
+++ b/app/src/main/res/layout/activity_choose_your_vehicle.xml
@@ -28,10 +28,12 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:textStyle="bold"
+                android:fontFamily="@font/benson_bagla_font"
                 android:text="Please choose your vehicle type."/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
@@ -48,16 +50,34 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+
+            <com.tiper.MaterialSpinner
+                android:id="@+id/material_spinner"
+                android:drawablePadding="16dp"
+                app:hintEnabled="true"
+                android:hint="Eg: Truck "
+                app:boxBackgroundColor="@color/colorPrimary"
+                android:layout_width="match_parent"
+                app:boxStrokeColor="@color/colorPrimary"
+                android:drawableStart="@drawable/ic_event_note"
+                android:layout_height="wrap_content"
+                app:spinnerMode="dropdown"/>
+
+
+
             <TextView
+                android:id="@+id/carManufacturText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:layout_marginTop="8dp"
                 android:textStyle="bold"
+                android:fontFamily="@font/benson_bagla_font"
                 android:text="Please choose Manufacturer."/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 >
 
@@ -68,31 +88,48 @@
                     android:drawableLeft="@drawable/car_icon_black"
                     android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                     android:drawablePadding="16dp"
-                    android:hint="Car Manufacturer "/>
+                    android:hint="Car Manufacturer " />
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.tiper.MaterialSpinner
+                android:id="@+id/carManufactur"
+                android:drawablePadding="16dp"
+                app:hintEnabled="true"
+                android:hint="Eg: Toyota "
+                app:boxBackgroundColor="@color/colorPrimary"
+                android:layout_width="match_parent"
+                app:boxStrokeColor="@color/colorPrimary"
+                android:drawableStart="@drawable/ic_event_note"
+                android:layout_height="wrap_content"
+                app:spinnerMode="dropdown"/>
+
             <TextView
+                android:id="@+id/chooseModelText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:layout_marginTop="8dp"
                 android:textStyle="bold"
+                android:fontFamily="@font/benson_bagla_font"
                 android:text="Please choose Model."/>
 
             <LinearLayout
+                android:id="@+id/chooseModelLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="wrap_content"
+                    android:visibility="gone"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
+
                         android:layout_height="wrap_content"
                         android:background="@drawable/car_chooser_spinner_left_radious"
                         android:drawableLeft="@drawable/car_icon_black"
@@ -106,11 +143,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.6"
+                    android:visibility="gone"
                     android:layout_marginLeft="1dp"
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
+
                         android:layout_height="wrap_content"
                         android:background="@drawable/car_chooser_spinner_right_radious"
                         android:drawableLeft="@drawable/ic_date_range_red_24dp"
@@ -119,14 +158,39 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <com.tiper.MaterialSpinner
+                    android:id="@+id/car_model_material_spinner"
+                    app:hintEnabled="true"
+                    android:layout_weight="2"
+                    android:hint="Car Model "
+                    app:boxBackgroundColor="@color/colorPrimary"
+                    android:layout_width="wrap_content"
+                    app:hintAnimationEnabled="true"
+                    app:boxStrokeColor="@color/colorPrimary"
+                    android:layout_height="wrap_content"
+                    app:spinnerMode="dropdown"/>
+                <com.tiper.MaterialSpinner
+                    android:id="@+id/yaer_material_spinner"
+                    android:drawablePadding="16dp"
+                    app:hintEnabled="true"
+                    android:hint="Year"
+                    android:layout_weight="2"
+                    app:boxBackgroundColor="@color/colorPrimary"
+                    android:layout_width="wrap_content"
+                    app:boxStrokeColor="@color/colorPrimary"
+                    android:drawableStart="@drawable/ic_event_note"
+                    android:layout_height="wrap_content"
+                    app:spinnerMode="dropdown"/>
+
             </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="15dp"
                 android:textStyle="bold"
+                android:fontFamily="@font/benson_bagla_font"
                 android:text="Please choose Model."/>
 
             <LinearLayout
@@ -137,19 +201,48 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <RadioButton
-                        android:id="@+id/radio0"
+                        android:id="@+id/Cradio0"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="4 seat car" />
 
                     <RadioButton
-                        android:id="@+id/radio1"
+                        android:id="@+id/Cradio1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="6 Seat Car" />
 
                     <RadioButton
-                        android:id="@+id/radio2"
+                        android:id="@+id/Cradio2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="12 Seat Car" />
+                </RadioGroup>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/truckLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:orientation="vertical">
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <RadioButton
+                        android:id="@+id/Tradio0"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="4 seat car" />
+
+                    <RadioButton
+                        android:id="@+id/Tradio1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="6 Seat Car" />
+
+                    <RadioButton
+                        android:id="@+id/Tradio2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="12 Seat Car" />
@@ -165,7 +258,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         app:cardElevation="10dp"
         android:layout_gravity="bottom">
 
@@ -177,9 +270,11 @@
             <Button
                 android:id="@+id/takePhotoBtn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="65dp"
                 android:text="Continue "
-                android:layout_margin="16dp"
+                android:textSize="16sp"
+                android:fontFamily="@font/benson_bagla_font"
+                android:layout_margin="18dp"
                 android:textColor="@color/white"
                 android:background="@drawable/btn_red_back"/>
 
