--- a/app/src/main/res/layout/fragment_trip_list.xml
+++ b/app/src/main/res/layout/fragment_trip_list.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:layout_marginTop="35dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -19,10 +20,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp">
+                android:layout_marginBottom="8dp"
+                android:focusable="true">
 
                 <LinearLayout
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="5"
@@ -52,7 +58,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/icon_yellow"
-                            android:textSize="26sp"
+                            android:textSize="22sp"
                             android:textStyle="bold"
                             android:text="Running Bids"/>
 
@@ -129,10 +135,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:foreground="?attr/selectableItemBackground"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp">
 
                 <LinearLayout
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="5"
@@ -162,7 +171,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/icon_green"
-                            android:textSize="26sp"
+                            android:textSize="22sp"
                             android:textStyle="bold"
                             android:text="Successful Bids"/>
 
@@ -240,12 +249,17 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:layout_marginBottom="8dp">
 
                 <LinearLayout
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="5"
+
                     android:orientation="horizontal">
 
                     <ImageView
@@ -272,7 +286,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/icon_red"
-                            android:textSize="26sp"
+                            android:textSize="22sp"
                             android:textStyle="bold"
                             android:text="Unsuccessful Bids"/>
 
